tests/ui/endpoint/invalid_attribute.stderr
error: Invalid attribute syntax
 --> tests/ui/endpoint/invalid_attribute.rs:8:12
  |
8 | #[read_all(FooResource)]
  |            ^^^^^^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/invalid_attribute.rs:4:10
  |
4 | #[derive(Resource)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `Resource` (in Nightly builds, run with -Z macro-backtrace for more info)
